fixes bug #3 -  page overflow issues across all games

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -10,6 +10,7 @@ body {
   max-width: 768px !important;
   margin-inline: auto;
   background-color: rgb(91 116 161) !important;
+  overflow: hidden;
 }
 
 .back-btn-and-score-wrapper {
