--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,6 +3,7 @@ body {
   font-family: "Bebas Neue", cursive;
   min-height: 100vh;
   max-width: 700px;
+  overflow-y: scroll !important;
 }
 
 @font-face {
